# File    : meson.build
# Purpose : Declares the sources and subdirs for this directory
# Author  : Martin Rizzo | <martinrizzo@gmail.com>
# Date    : Nov 21, 2025
# Repo    : https://github.com/martin-rizzo/CheckpointTools
# License : MIT
#- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
#subdir('<none>')
app_dirs    += include_directories('.')
app_sources += files(
    'main.cpp',
)
